# pinggenius_backend

./: .gitignore  README.md  agent_core.py  credentials.json  gmail_service.py  main.py  pyproject.toml  refresh_token_auth.py  token.json
api/v1/: analyze_email.py  generate_email.py  save_contact.py
database/: mongo.py
models/: contact.py  hard_email.py
utils/: email_generator.py  extract_name.py
